Bug 47735 - SNA: underscores and equal sign are not rendeder in xterm
Summary: SNA: underscores and equal sign are not rendeder in xterm
Status: RESOLVED FIXED
Alias: None
Product: xorg
Classification: Unclassified
Component: Driver/intel (show other bugs)
Version: git
Hardware: Other All
: medium normal
Assignee: Chris Wilson
QA Contact: Xorg Project Team
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-03-22 14:19 UTC by Jiri Slaby
Modified: 2012-03-22 14:55 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments
xorg.log with UXA (29.84 KB, text/plain)
2012-03-22 14:19 UTC, Jiri Slaby
no flags Details
xorg.log with SNA (26.76 KB, text/plain)
2012-03-22 14:20 UTC, Jiri Slaby
no flags Details

Description Jiri Slaby 2012-03-22 14:19:29 UTC
Created attachment 58888 [details]
xorg.log with UXA

When I build with --enable-sna, those two letters are not show in xterm. Instead a blank space is there.

So code like this:
a_b = c;
looks like:
a b   c;

Revert to UXA helps. This is G33.
Comment 1 Jiri Slaby 2012-03-22 14:20:51 UTC
Created attachment 58889 [details]
xorg.log with SNA
Comment 2 Chris Wilson 2012-03-22 14:28:56 UTC
Just those two characters? Odd pair.

Are you running a compositor? (That determines which PolyText path is called by the xserver.) Can you attach your .Xdefaults?
Comment 3 Jiri Slaby 2012-03-22 14:37:13 UTC
(In reply to comment #2)
> Just those two characters? Odd pair.

Maybe there are more. But these just jumped out of C code. If that's important, I might check whole ASCII.

> Are you running a compositor? (That determines which PolyText path is called by
> the xserver.)

Perhaps. It's KDE 4.8 with effects enabled.

> Can you attach your .Xdefaults?

I don't have any.
Comment 4 Chris Wilson 2012-03-22 14:55:56 UTC
commit 83f98d6e5c303e52c1e0fb95b6237ebf62a8edfe
Author: Chris Wilson <chris@chris-wilson.co.uk>
Date:   Thu Mar 22 21:57:14 2012 +0000

    sna: Correctly test for clear glyphs when searching for ones to skip
    
    With xterm, it is quite common for it to redraw itself by using lots of
    spaces and so it is efficient for us if we ellide those clear glyphs and
    only draw the backing boxes. However, we were only checking the first 8
    pixels in each line because of a missing pointer increment.
    
    Fixes absent '=' characters when using a compositor and ImageText.
    
    Reported-by: Jiri Slaby <jirislaby@gmail.com>
    Bugzilla: https://bugs.freedesktop.org/show_bug.cgi?id=47735
    Signed-off-by: Chris Wilson <chris@chris-wilson.co.uk>


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.